force-app/main/default/objects/AO_Program_Applicant__c.object
<CustomObject>
    <description>Applicants relating to a particular programs</description>
    <fields>
        <fullName>AO_Account_Host_Institution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Host Institution</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Partner</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Program Applicants</relationshipLabel>
        <relationshipName>Program_Applicants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AO_Application_Status__c</fullName>
        <description>Select appropriate Status of Student Program&apos;s Application</description>
        <label>Application Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>AO_Application_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>AO_Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Indicates the applicant of a particular program</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Program Applicants</relationshipLabel>
        <relationshipName>Program_Applicants</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AO_Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Mention the country of Institution</description>
        <label>Country</label>
        <referenceTo>Country_Attribute__c</referenceTo>
        <relationshipLabel>Program Applicants</relationshipLabel>
        <relationshipName>Program_Applicants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AO_End_Date__c</fullName>
        <description>Contains Program Applicant&apos;s End date in current academic year</description>
        <inlineHelpText>Program Applicant&apos;s End date in current academic year</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AO_Faculty_Status__c</fullName>
        <description>Select appropriate Status for Faculty</description>
        <label>Faculty/School status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Eligible</fullName>
                </value>
                <value>
                    <fullName>Enrolled by Faculty(ies)/School(s)</fullName>
                </value>
                <value>
                    <fullName>Not Approved</fullName>
                </value>
                <value>
                    <fullName>One Faculty/School Approved, Pending Other</fullName>
                </value>
                <value>
                    <fullName>One Faculty/School Not Approved, Pending Other</fullName>
                </value>
                <value>
                    <fullName>Shortlisted</fullName>
                </value>
                <value>
                    <fullName>Study Plan Approved but Needs More Units</fullName>
                </value>
                <value>
                    <fullName>Study Plan Approved by Faculty(ies)/School(s)</fullName>
                </value>
                <value>
                    <fullName>Study Plan Not Approved by Faculty(ies)/School(s)</fullName>
                </value>
                <value>
                    <fullName>Study Plan Under Assessment</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Successful</fullName>
                </value>
                <value>
                    <fullName>Unsuccessful</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AO_Program_Location__c</fullName>
        <description>Update Program Location here</description>
        <label>Program Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AO_Program__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Indicates the program to which the applicant is related to</description>
        <label>Program</label>
        <referenceTo>AO_Program__c</referenceTo>
        <relationshipLabel>Program Applicants</relationshipLabel>
        <relationshipName>Program_Applicants</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AO_Start_Date__c</fullName>
        <description>Contains Program Applicant&apos;s Start date in current academic year</description>
        <inlineHelpText>Program Applicant&apos;s Start date in current academic year</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact_Hyperlink__c</fullName>
        <description>Hyperlink of the contact record for use in flow</description>
        <formula>HYPERLINK(&apos;/&apos; &amp; AO_Contact__c , AO_Contact__r.Full_Name__c, &apos;_blank&apos;)</formula>
        <inlineHelpText>Hyperlink of the contact record for use in flow</inlineHelpText>
        <label>Contact Hyperlink</label>
        <type>Text</type>
    </fields>
    <label>Program Applicant</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>AO_Contact__c</columns>
        <columns>AO_Program__c</columns>
        <columns>AO_Program_Location__c</columns>
        <columns>AO_Application_Status__c</columns>
        <columns>AO_Faculty_Status__c</columns>
        <columns>AO_Start_Date__c</columns>
        <columns>AO_End_Date__c</columns>
        <columns>AO_Account_Host_Institution__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PA-{000000}</displayFormat>
        <label>Program Applicant Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program Applicants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>AO_PA_VALIDATE_END_BEFORE_START_DATE</fullName>
        <active>true</active>
        <description>End date can&apos;t be before Start Date</description>
        <errorConditionFormula>AO_End_Date__c &lt;= AO_Start_Date__c</errorConditionFormula>
        <errorMessage>End date can&apos;t be before or on the same day as the Start Date</errorMessage>
    </validationRules>
</CustomObject>